Move server file to server folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "2.1"
 services:
   server:
     build:
-      context: ./
+      context: ./server
       args:
         - http_proxy
         - https_proxy
