--- a/proxy/nginx.template
+++ b/proxy/nginx.template
@@ -9,7 +9,7 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://server:8090/confluence;
+        proxy_pass http://server:8090/${CONFLUENCE_CONTEXT_PATH};
         client_max_body_size 10M;
     }
 }
