--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,6 +1,13 @@
 FROM nginx:1.11
 MAINTAINER Software Craftsmen GmbH und CoKG <office@software-craftsmen.at>
 
+ARG version="unknown"
+ARG build_date="unknown"
+ARG commit_hash="unknown"
+ARG vcs_url="unknown"
+ARG vcs_branch="unknown"
+ARG vcs_ref="unknown"
+
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends curl && \
     rm -rf /var/lib/apt/lists/*
