--- a/proxy/nginx.template
+++ b/proxy/nginx.template
@@ -1,7 +1,7 @@
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-	server_name ${NGINX_SERVER_NAME};
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name ${NGINX_SERVER_NAME};
 
     location /${CONFLUENCE_CONTEXT_PATH} {
         proxy_set_header X-Real-IP $remote_addr;
@@ -11,5 +11,17 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://server:8090/${CONFLUENCE_CONTEXT_PATH};
         client_max_body_size 50M;
+	proxy_connect_timeout   300;
+	proxy_send_timeout      300;
+	proxy_read_timeout      300;
+    }
+    location /synchrony {
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://server:8091/synchrony;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 }
