--- a/proxy/nginx-ssl.template
+++ b/proxy/nginx-ssl.template
@@ -15,7 +15,9 @@ server {
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://server:8090/${CONFLUENCE_CONTEXT_PATH};
-        client_max_body_size 50M;
+        client_max_body_size    50M;
+        proxy_connect_timeout   15s;
+        proxy_read_timeout      600s;
     }
 }
 
