--- a/nginx-ssl.yml
+++ b/nginx-ssl.yml
@@ -6,8 +6,7 @@ services:
     ports:
       - ${NGINX_HTTPS_PORT}:443
     healthcheck:
-      test: ["CMD", "curl", "-f", "--insecure", "https://proxy/${CONFLUENCE_CONTEXT_PATH}"]
-      timeout: 5s
+      test: ["CMD", "curl", "--connect-timeout", "5", "-f", "--insecure", "https://proxy/${CONFLUENCE_CONTEXT_PATH}"]
     volumes:
       - ./.ssl/${NGINX_SERVER_NAME}.crt:/etc/ssl/certs/${NGINX_SERVER_NAME}.crt
       - ./.ssl/${NGINX_SERVER_NAME}.key:/etc/ssl/private/${NGINX_SERVER_NAME}.key
