--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
-        - CONFLUENCE_VERSION="6.3.2"
+        - CONFLUENCE_VERSION
     image: ${DOCKER_REGISTRY}atlassian-confluence:${CONFLUENCE_TAG}
     environment:
       - CONFLUENCE_JDBC_USER
@@ -16,6 +16,8 @@ services:
       - CONFLUENCE_LICENSE
       - NGINX_SERVER_NAME
       - CONFLUENCE_CONTEXT_PATH
+      - START_CONFLUENCE_JAVA_OPTS
+      - CATALINA_OPTS
     ports:
       - ${CONFLUENCE_HTTP_PORT}:8090
     restart: unless-stopped
